Got add pupilworking!
At last!

--- a/public/_manifest.json
+++ b/public/_manifest.json
@@ -6,7 +6,8 @@
 "display" : "fullscreen",
 "start_url" : "/index.html",
 "short_name" : "StuDrive",
-"description" : "",
+"id" : "/index.html",
+"description" : "A webapp to help stuart manage his lessons.",
 "orientation" : "portrait",
 "background_color": "#000000",
 "theme_color": "#000000",
