--- a/public/_manifest.json
+++ b/public/_manifest.json
@@ -6,8 +6,7 @@
 "display" : "fullscreen",
 "start_url" : "/index.html",
 "short_name" : "StuDrive",
-"id" : "/index.html",
-"description" : "A webapp to help stuart manage his lessons.",
+"description" : "",
 "orientation" : "portrait",
 "background_color": "#000000",
 "theme_color": "#000000",
